# Sudoku-Pygame

./: README.md  pyproject.toml  requirements.txt
scripts/: run.sh
src/sudoku_pygame/: __init__.py  board.py  colors.py  game.py  generator.py  settings.py  ui.py
tests/: test_solver.py
