[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sudoku-pygame"
version = "0.1.0"
description = "Sudoku game with PyGame — clean architecture, generator, solver, and UI."
authors = [
  { name = "Mobin Yousefi", email = "" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
  "pygame>=2.6",
]

[project.urls]
Homepage = "https://github.com/mobinyousefi-cs/sudoku-pygame"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"